planets overflow fixed and js optimization

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
     position: relative;
     font-family: 'Montserrat', sans-serif;
     font-size: 0.9em;
+    overflow: hidden;
 }
 
 header {
@@ -53,6 +54,7 @@ main {
 }
 
 #galaxy-container {
+    display: flex;
     width: 100%;
     height: 100%;
     background-image: url(../assets/bg.jpg);
@@ -274,8 +276,8 @@ button:active {
     color: #040406;
     border-radius: 5px;
     z-index: 1000;
-    width: 75px;
     height: 30px;
+    padding: 0 5px;
     transition: all 700ms linear;
     position: absolute;
     top: 50px;
@@ -349,6 +351,12 @@ button:active {
 
 #preloader-icon {
     animation: rotation infinite linear 2000ms;
+}
+
+.static-planet{
+    position: relative!important;
+    width: 50px!important;
+    margin-right: -90px;
 }
 
   /* dispositivi mobili (portrait and landscape) */
